--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,17 @@ body {
   background-color: yellow;
 }
 
+@media  (max-width: 1200px){
+
+  .container {
+    display: grid;
+    grid-template-columns: repeat(2,2fr);
+    align-items: center;
+    gap: 0.5rem;
+    width: 100%;
+  }
+}
+
 .pressed {
   box-shadow: 0 0 20px white;
   background-color: grey;
