--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ body {
     display: grid;
     grid-template-columns: repeat(2,2fr);
     align-items: center;
-    gap: 0.5rem;
+    gap: 0;
     width: 100%;
   }
 }
