--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
   display: block;
   width: 50%;
   margin: auto;
-
+  max-width: fit-content;
 }
 
 .btn {
@@ -55,6 +55,7 @@ body {
     align-items: center;
     gap: 0;
     width: 100%;
+    max-width: fit-content;
   }
 }
 
